data/derived/sp14/progs/unify/prog0640.ml.out
Characters 152-153:
  List.fold_left f base l;;
                        ^
Error: This expression has type string -> string
       but an expression was expected of type (string -> string) list
